traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:33: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
    if(y<6 && s=0){
           ^